# CMakeTest

./: CMakeLists.txt  README.md
App/: CMakeLists.txt
App/HelloQT/: CMakeLists.txt  main.cpp  mainwindow.cpp
App/HelloQT/resource/: HelloQT.qrc
App/HelloWorld/: CMakeLists.txt  Test1.cpp  Test1.h  main.cpp
Modules/: CMakeLists.txt
Modules/TestLib1/: CMakeLists.txt  TestLib1.cpp  TestLib1.h
Modules/TestLib2/: CMakeLists.txt  MyDialog.cpp  MyDialog.h  TestLib2.cpp  TestLib2.h
Modules/TestLib2/resource/: TestLib2.qrc
Plugins/: CMakeLists.txt
Plugins/TestPluginA/: CMakeLists.txt
Plugins/TestPluginA/include/: TestInterface.h
Plugins/TestPluginA/resource/: HelloQT.qrc
Plugins/TestPluginA/src/: TestPluginA.cpp  TestPluginA.h
